Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-32993

Time to wait before force-stopping doesn't check if process running

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 17.0.0
    • Qt Creator 16.0.1
    • Remote Linux
    • None
    • Linux/X11
    • 86c852734 (17.0)

      If you set "Time to wait before force-shopping application" to 10 seconds. Pressing run will try to kill the process on the remote device and wait 10 seconds even if the process isn't running. To save time, if the process is not running it should not kill with 10 second timeout but immediately continue.

        For Gerrit Dashboard: QTCREATORBUG-32993
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            net147 Jonathan Liu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes