RemoteLinux: Do not wait needlessly for non-existing process to finish

... when deploying an application.
Amends 8da67b75c500fcfda5e9ef781d5e09472b9cf74a.

Fixes: QTCREATORBUG-32993
Change-Id: Ieba174cc8248ffe736a6a652ecf0036d0af5343f
Reviewed-by: Christian Stenger <christian.stenger@qt.io>
Reviewed-by: hjk <hjk@qt.io>